src/fewshot/bof1/bof1_warning.txt
code.cpp:13:8: error: out of bounds access of "buff"
    buff[idx] = val;
     ^